# graphics-project

./: AssimpImport.cpp  AssimpImport.h  CMakeLists.txt  Mesh3D.cpp  Mesh3D.h  Object3D.cpp  Object3D.h  ShaderProgram.cpp  StbImage.cpp  Texture.h  TranslationAnimation.h  main.cpp
shaders/: all_green.frag  no_transform.vert
